Thread-safety improvements and some new methods in attribute classes
  -- It also contains some optimizations and code syntax improvements